4.0.4
Merged from 3.0:
 * Fix flaky test - test_cqlsh_completion.TestCqlshCompletion (CASSANDRA-17338)
 * Fixed TestCqlshOutput failing tests (CASSANDRA-17386)
 * Lazy transaction log replica creation allows incorrect replica content divergence during anticompaction (CASSANDRA-17273)
 * LeveledCompactionStrategy disk space check improvements (CASSANDRA-17272)

4.0.3
 * Deprecate otc_coalescing_strategy, otc_coalescing_window_us, otc_coalescing_enough_coalesced_messages,
   otc_backlog_expiration_interval_ms (CASSANDRA-17377)
 * Improve start up processing of Incremental Repair information read from system.repairs (CASSANDRA-17342)

4.0.2
 * Extend operator control over the UDF threading model for CVE-2021-44521 (CASSANDRA-17352)
 * Full Java 11 support (CASSANDRA-16894)
 * Remove unused 'geomet' package from cqlsh path (CASSANDRA-17271)
 * Removed unused 'cql' dependency (CASSANDRA-17247)
 * Don't block gossip when clearing repair snapshots (CASSANDRA-17168)
 * Deduplicate warnings for deprecated parameters (changed names) (CASSANDRA-17160)
 * Update ant-junit to version 1.10.12 (CASSANDRA-17218)
 * Add droppable tombstone metrics to nodetool tablestats (CASSANDRA-16308)
 * Fix disk failure triggered when enabling FQL on an unclean directory (CASSANDRA-17136)
 * Fixed broken classpath when multiple jars in build directory (CASSANDRA-17129)
 * DebuggableThreadPoolExecutor does not propagate client warnings (CASSANDRA-17072)
 * internode_send_buff_size_in_bytes and internode_recv_buff_size_in_bytes have new names. Backward compatibility with the old names added (CASSANDRA-17141)
 * Remove unused configuration parameters from cassandra.yaml (CASSANDRA-17132)
 * Queries performed with NODE_LOCAL consistency level do not update request metrics (CASSANDRA-17052)
 * Fix multiple full sources can be select unexpectedly for bootstrap streaming (CASSANDRA-16945)
 * Fix cassandra.yaml formatting of parameters (CASSANDRA-17131)